force-app/main/default/objects/Release_Notes__c/Release_Notes__c.object-meta.xml
<CustomObject>
    <label>Release Notes</label>
    <nameField>
        <displayFormat>RN-{0000}</displayFormat>
        <label>Release Notes Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Release Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>