force-app/main/default/objects/Release_Notes__c/fields/Release_Notes_Complete__c.field-meta.xml
<CustomField>
    <fullName>Release_Notes_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Checkbox indicating that the release notes are complete and ready for use. Check this when the release notes text has been finalized.</description>
    <inlineHelpText
  >Check this box when the release notes are complete and finalized. This helps track which release notes are ready for deployment.</inlineHelpText>
    <label>Release Notes Complete</label>
    <type>Checkbox</type>
</CustomField>