force-app/main/default/objects/Release_Notes__c/fields/Release_Notes_Text__c.field-meta.xml
<CustomField>
    <fullName>Release_Notes_Text__c</fullName>
    <label>Release Notes Text</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>