force-app/main/default/objects/Release_Notes__c/fields/Release_Version__c.field-meta.xml
<CustomField>
    <fullName>Release_Version__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Release Version</label>
    <referenceTo>Release_Version__c</referenceTo>
    <relationshipLabel>Release Notes</relationshipLabel>
    <relationshipName>Release_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>